--- a/view/admin/common/_header.html
+++ b/view/admin/common/_header.html
@@ -65,7 +65,6 @@
             nav.html($(e).html())
 
             nav.appendTo('.mobile-nav-container')
-
         })
 
         $('.left-bottom-options').click(function(){
@@ -74,7 +73,7 @@
                 content:$('.layui-side'),
                 anim:3,
                 offset:'l',
-                area:['60%','100%'],
+                area:['140px','100%'],
                 shadeClose:true,
                 title:false,
                 closeBtn:false,
