修改页面标题和面包屑

--- a/view/admin/post/edit.html
+++ b/view/admin/post/edit.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>文章编辑</title>
+  <title>内容管理</title>
   {include file="common/_require"}
   <link rel="stylesheet" href="/static/lib/quill/quill.snow.css">
   <script src="/static/lib/quill/quill.min.js"></script>
@@ -34,7 +34,7 @@
         <div class="main-header">
           <span class="layui-breadcrumb">
             <a>首页</a>
-            <a><cite>文章编辑</cite></a>
+            <a><cite>内容管理</cite></a>
           </span>
         </div>
         <div class="main-container">
