--- a/view/admin/tag/index.html
+++ b/view/admin/tag/index.html
@@ -27,7 +27,7 @@
         <div class="main-header">
           <span class="layui-breadcrumb">
             <a>首页</a>
-            <a><cite>系统信息</cite></a>
+            <a><cite>标签管理</cite></a>
           </span>
         </div>
         <div class="main-container">
