--- a/view/admin/post/index.html
+++ b/view/admin/post/index.html
@@ -44,6 +44,7 @@
                 <th>封面</th>
                 <th>简介</th>
                 <th>排序</th>
+                <th>状态</th>
                 <th>操作</th>
               </tr>
             </thead>
@@ -57,6 +58,7 @@
                 <td><img src="{$vo.poster}" alt=""></td>
                 <td>{$vo.desc}</td>
                 <td>{$vo.sort}</td>
+                <td>{$vo.status_name}</td>
                 <td>
                   <div class="layui-btn-container">
                     <a class="layui-btn layui-btn-sm" href="{:url('edit',['id'=>$vo.id])}">编辑</a>
