--- a/view/admin/nav/edit.html
+++ b/view/admin/nav/edit.html
@@ -47,6 +47,12 @@
                           class="layui-input">
                       </div>
                     </div>
+                    <div class="layui-form-item">
+                      <div class="layui-form-label">副标题/描述</div>
+                      <div class="layui-input-block">
+                        <textarea name="desc" class="layui-textarea">{$nav.desc}</textarea>
+                      </div>
+                    </div>
                     
                     {if $Request.param.show_img == 1 }
                     <div class="layui-form-item">
