--- a/view/admin/post/create.html
+++ b/view/admin/post/create.html
@@ -213,7 +213,16 @@
                         <div class="layui-form-mid layui-word-aux">越大越靠前</div>
                       </div>
                     </div>
-
+                    <div class="layui-form-item">
+                      <div class="layui-form-label">模板</div>
+                      <div class="layui-input-block">
+                        <select name="tpl_name">
+                          {volist name=':config("view_type.post")' id='tpl_name' key="tpl_fix"}
+                          <option value="{$tpl_fix}">{$tpl_name}</option>
+                          {/volist}
+                        </select>
+                      </div>
+                    </div>
                   </div>
                 </fieldset>
               </div>
