--- a/view/admin/category/edit.html
+++ b/view/admin/category/edit.html
@@ -57,7 +57,34 @@
                       </select>     
                     </div>
                   </div>
-                  
+                  <div class="layui-form-item">
+                    <div class="layui-form-label">副标题/描述</div>
+                    <div class="layui-input-block">
+                      <textarea name="desc" class="layui-textarea"></textarea>
+                    </div>
+                  </div>
+                  <div class="layui-form-item">
+                    <div class="layui-form-label">附图</div>
+                    <div class="layui-input-block">
+                      <input type="hidden" name="title_img">
+                      <div>
+                        <div class="layui-btn upload-title-img">上传</div>
+                      </div>
+                      <div>
+                        <img src="" class="title-img" style="display: none;max-width: 200px;max-height: 200px;;" alt="">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="layui-form-item">
+                    <div class="layui-form-label">模板</div>
+                    <div class="layui-input-block">
+                      <select name="tpl_name">
+                        {volist name=':config("view_type.category")' id='view_type' key="tpl_name"}
+                          <option value="{$tpl_name}">{$view_type}</option>
+                        {/volist}
+                      </select>
+                    </div>
+                  </div>
                   <div class="layui-form-item">
                     <button class="layui-btn layui-btn-fluid" submit lay-submit lay-filter="site-info">提交</button>
                   </div>
@@ -79,7 +106,8 @@
       var form = layui.form;
 
       form.val('*',{
-        pid:'{$category.pid}'
+        pid:'{$category.pid}',
+        tpl_name:'{$category->getData("tpl_name")}',
       })
     })
 
