--- a/view/admin/nav/create.html
+++ b/view/admin/nav/create.html
@@ -48,6 +48,12 @@
                         <input type="text" name="title" required lay-verify="required" value="" class="layui-input">
                       </div>
                     </div>
+                    <div class="layui-form-item">
+                      <div class="layui-form-label">副标题/描述</div>
+                      <div class="layui-input-block">
+                        <textarea name="desc" class="layui-textarea"></textarea>
+                      </div>
+                    </div>
                     
                     {if $Request.param.show_img == 1 }
                     <div class="layui-form-item">
