--- a/view/admin/category/edit.html
+++ b/view/admin/category/edit.html
@@ -60,18 +60,18 @@
                   <div class="layui-form-item">
                     <div class="layui-form-label">副标题/描述</div>
                     <div class="layui-input-block">
-                      <textarea name="desc" class="layui-textarea"></textarea>
+                      <textarea name="desc" class="layui-textarea">{$category->getData('desc')}</textarea>
                     </div>
                   </div>
                   <div class="layui-form-item">
                     <div class="layui-form-label">附图</div>
                     <div class="layui-input-block">
-                      <input type="hidden" name="title_img">
+                      <input type="hidden" name="title_img" value="{$category->getData('title_img')}">
                       <div>
                         <div class="layui-btn upload-title-img">上传</div>
                       </div>
                       <div>
-                        <img src="" class="title-img" style="display: none;max-width: 200px;max-height: 200px;;" alt="">
+                        <img src="{$category.title_img}" class="title-img" style="max-width: 200px;max-height: 200px;;" alt="">
                       </div>
                     </div>
                   </div>
@@ -79,10 +79,17 @@
                     <div class="layui-form-label">模板</div>
                     <div class="layui-input-block">
                       <select name="tpl_name">
-                        {volist name=':config("view_type.category")' id='view_type' key="tpl_name"}
-                          <option value="{$tpl_name}">{$view_type}</option>
+                        {volist name=':config("view_type.category")' id='view_type'}
+                          <option value="{$key}">{$view_type}</option>
                         {/volist}
                       </select>
+                    </div>
+                  </div>
+                  <div class="layui-form-item">
+                    <div class="layui-form-label">状态</div>
+                    <div class="layui-input-block">
+                      <input type="radio" name="status" value="1" title="显示">
+                      <input type="radio" name="status" value="0" title="不显示">
                     </div>
                   </div>
                   <div class="layui-form-item">
@@ -102,12 +109,33 @@
 
   <script>
 
-    layui.use(['form'],function(){
+    layui.use(['form','upload'],function(){
       var form = layui.form;
+      var upload = layui.upload;
 
       form.val('*',{
         pid:'{$category.pid}',
         tpl_name:'{$category->getData("tpl_name")}',
+        status:'{$category->getData("status")}',
+      })
+
+      upload.render({
+        elem: '.upload-title-img',
+        url: '{:url("api/Files/save")}',
+        data: {
+          type: 4,
+          dir: 'article'
+        },
+        accept: 'images',
+        done: function (result) {
+          if (result.code == 0) {
+            layer.msg('上传成功');
+            $('input[name="title_img"]').val(result.data.save_name)
+            $('.title-img').attr('src', result.data.src).show();
+          } else {
+            layer.msg(result.msg)
+          }
+        }
       })
     })
 
