--- a/view/admin/nav/index.html
+++ b/view/admin/nav/index.html
@@ -44,6 +44,7 @@
                   <th>名称</th>
                   <th>链接</th>
                   <th>排序</th>
+                  <th>状态</th>
 
                   <th>操作</th>
                 </tr>
@@ -57,6 +58,7 @@
 
                   <td>{$vo.value}</td>
                   <td>{$vo.sort}</td>
+                  <td>{$vo.status_name}</td>
                   <td>
                     <div class="layui-btn-container">
                       <a class="layui-btn layui-btn-sm"
