--- a/view/admin/system/theme.html
+++ b/view/admin/system/theme.html
@@ -40,10 +40,10 @@
                                         <div class="layui-form-label">选择主题</div>
                                         <div class="layui-input-block">
                                             <div>
-                                                <input type="radio" name="index_tpl_name" value="" title="无">
+                                                <input type="radio" name="index_tpl_name" value="" title="无-''">
                                             </div>
                                             <div>
-                                                <input type="radio" name="index_tpl_name" value="easy_blue_" title="官网主题简约蓝">
+                                                <input type="radio" name="index_tpl_name" value="easy_blue_" title="官网主题简约蓝-'easy_blue_'">
                                             </div>
                                         </div>
                                     </div>
