--- a/view/admin/post/edit.html
+++ b/view/admin/post/edit.html
@@ -221,8 +221,8 @@
                       <div class="layui-form-label">模板</div>
                       <div class="layui-input-block">
                         <select name="tpl_name">
-                          {volist name=':config("view_type.post")' id='tpl_name' key="tpl_fix"}
-                          <option value="{$tpl_fix}">{$tpl_name}</option>
+                          {volist name=':config("view_type.post")' id='tpl_name'}
+                          <option value="{$key}">{$tpl_name}</option>
                           {/volist}
                         </select>
                       </div>
@@ -361,7 +361,7 @@
 
         $.post('{:url("update")}', formData, function (result) {
 
-          layer.msg('添加成功')
+          layer.msg('保存成功')
           setTimeout(() => {
             location.href = result.data.jump_to_url
           }, 1200);
