--- a/view/admin/category/index.html
+++ b/view/admin/category/index.html
@@ -41,6 +41,7 @@
                 <tr>
                   <th>ID</th>
                   <th>名称</th>
+                  <th>模板</th>
                   <th>操作</th>
                 </tr>
               </thead>
@@ -50,6 +51,7 @@
                 <tr class="item" data-id="{$vo.id}">
                   <td>{$vo.id}</td>
                   <td> {:str_repeat('|--',$vo.level)} {$vo.title}</td>
+                  <td>{$vo.tpl_name}</td>
                   <td>
                     <div class="layui-btn-container">
                       <a class="layui-btn layui-btn-sm" href="{:url('index/Category/read',['id'=>$vo.id])}">查看</a>
