--- a/view/admin/post/index.html
+++ b/view/admin/post/index.html
@@ -73,6 +73,7 @@
                 </td>
                 <td>
                   <div class="layui-btn-container">
+                    <a class="layui-btn layui-btn-sm" href="{:url('index/Post/read',['id'=>$vo.id])}">查看</a>
                     <a class="layui-btn layui-btn-sm" href="{:url('edit',['id'=>$vo.id])}">编辑</a>
                     <div class="layui-btn layui-btn-sm delete">删除</div>
                   </div>
