--- a/view/admin/system/theme.html
+++ b/view/admin/system/theme.html
@@ -45,6 +45,12 @@
                                             <div>
                                                 <input type="radio" name="index_tpl_name" value="easy_blue_" title="官网主题简约蓝-'easy_blue_'">
                                             </div>
+                                            <div>
+                                                <input type="radio" name="index_tpl_name" value="easy_blue_" title="官网主题简约蓝-'easy_blue_'">
+                                            </div>
+                                            <div>
+                                                <input type="radio" name="index_tpl_name" value="easy_blue_" title="官网主题简约蓝-'easy_blue_'">
+                                            </div>
                                         </div>
                                     </div>
                                     
