修改主题设置

--- a/view/admin/system/theme.html
+++ b/view/admin/system/theme.html
@@ -46,10 +46,13 @@
                                                 <input type="radio" name="index_tpl_name" value="easy_blue_" title="官网主题简约蓝-'easy_blue_'">
                                             </div>
                                             <div>
-                                                <input type="radio" name="index_tpl_name" value="easy_blue_" title="官网主题简约蓝-'easy_blue_'">
+                                                <input type="radio" name="index_tpl_name" value="articles_" title="资讯头条主题-'articles_'">
                                             </div>
                                             <div>
-                                                <input type="radio" name="index_tpl_name" value="easy_blue_" title="官网主题简约蓝-'easy_blue_'">
+                                                <input type="radio" name="index_tpl_name" value="documents_" title="文档主题-'documents_'">
+                                            </div>
+                                            <div>
+                                                <input type="radio" name="index_tpl_name" value="blog_" title="博客主题-'blog_'">
                                             </div>
                                         </div>
                                     </div>
